# happy

./: .bochsrc  .gitignore  CMakeLists.txt  Makefile  README.md
kernel/: CMakeLists.txt  Makefile
kernel/src/: Boot.asm  Debug.cpp  Entry.cpp  Utils.h  VGAConsole.cpp  VGAConsole.h  boot.asm  linker.ld  main.cpp
libc/: Makefile
libc/include/: string.h
libc/src/string/: memcmp.c  memcpy.c  memmove.c  memset.c
toolchain/: .gitignore  README.md  build-bochs.sh  build-cross.sh  gcc-11.1.0.patch  grub.cfg  install.sh  mkimage.sh
